<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/color_background_card"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="@dimen/keyline_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_social_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/keyline_medium"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                tools:text="@string/customer_list_example_name" />

            <View
                android:layout_margin="@dimen/keyline_medium"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorWindowBackground" />

            <TextView
                android:id="@+id/text_view_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_phone"
                android:drawableStart="@drawable/ic_phone"
                android:paddingBottom="@dimen/keyline_medium"
                android:drawablePadding="@dimen/keyline_large"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="@string/customer_list_example_phone" />

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/keyline_large"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                tools:text="@string/customer_list_example_email" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>